# MH-NISANKIRAN_Teknofest_Fighter_UAV

./: .gitignore  README.md
src/Ground Control Software/: requirements.txt
src/Ground Control Software/Mavi_IHA_Arayuz/: esri_test.html  harita_uygulamasi.py  main.py  mav.parm  mav_1_125.parm  mavlink_manager.py  osm_test.html  satellite_map.html  styles.qss  sunucu_haberlesme.py  test.html  test_harita.html  test_harita.py  test_video_qt.py  test_webchannel.py  veri_simulatoru.py
src/Ground Control Software/Mavi_IHA_Arayuz/resources/widgets/: camera_widget.py  command_widget.py  hss_simulator.py  hss_widget.py  indicators_widget.py  kamikaze_widget.py  map_widget.py  telemetry_log_widget.py  telemetry_widget.py  top_bar_widget.py
src/Ground Control Software/Mavi_IHA_Arayuz/web_map/: index.html  qwebchannel.js  test_browser.html
src/Mission Software/: .gitignore  Dockerfile  docker-compose.yml
src/Mission Software/nisankiran_core/: CMakeLists.txt  package.xml
src/Mission Software/nisankiran_core/include/nisankiran_core/: offboard_controller.hpp
src/Mission Software/nisankiran_core/src/: offboard_controller.cpp  offboard_fighter.cpp  targeter.cpp
src/Mission Software/nisankiran_interfaces/: CMakeLists.txt  package.xml
src/Mission Software/nisankiran_interfaces/srv/: TargetKill.srv
src/Mission Software/nisankiran_telemetry/: package.xml  setup.cfg  setup.py
src/Mission Software/nisankiran_telemetry/launch/: nisankiran_bringup.launch.py
src/Mission Software/nisankiran_telemetry/nisankiran_telemetry/: fake_server.py  server_listener.py  vision.py
